Fix navbar z-index conflict with button

--- a/src/components/nav/navbar.css
+++ b/src/components/nav/navbar.css
@@ -7,7 +7,7 @@
 	display: flex;
 	justify-content: center;
 	background-color: var(--dark-1);
-	z-index: 5;
+	z-index: 30;
 }
 
 nav {
